deploy/apps/sender/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: sender-tls
  labels:
    app: sender-tls-ccdt
  name: sender-tls-ccdt
spec:
  ports:
  - port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app: sender-tls-ccdt
status:
  loadBalancer: {}
