deploy/apps/sender/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: sender-tls-ccdt
  name: sender-tls-ccdt
spec:
  port:
    targetPort: 9443
  to:
    kind: Service
    name: sender-tls-ccdt
    weight: 100
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
